Fixed font size for About-me and Hobbies pages so it doesnt overlap on small screens

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ h3 {
 }
 
 .text-position {
-  font-size: 32px;
+  font-size: 28px;
   position: absolute;
   top: 35%;
   left: 15%;
@@ -155,7 +155,7 @@ h3 {
   top: 50%;
   left: 15%;
   transform: translate(-10%, -50%);
-  font-size: 32px;
+  font-size: 28px;
 }
 
 .repaythedelay {
